# solana_token_scanner

./: Cargo.toml
src/: error.rs  main.rs
src/domain/: analysis.rs  mod.rs  token_stats.rs
src/domain/decoder/: account.rs  error.rs  event.rs  helpers.rs  mod.rs
src/domain/event_decoder/: decode_error.rs  event_decoder.rs  helpers.rs  mod.rs
src/infra/: mod.rs  solana_rpc.rs  token_transfer.rs
src/services/: preflight.rs
