[package]
name = "solana_token_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
solana-client = "2.3.6"
solana-sdk = "2.3.1"
spl-token-2022 = "9.0.0"
thiserror = "2.0.16"
solana-account-decoder = "2.3.6"
tokio = { version = "1.47.1", features = ["full"] }
solana-transaction-status-client-types = "2.3.6"
spl-token = "8.0.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
